--- a/twitterBot_Backend/package.json
+++ b/twitterBot_Backend/package.json
@@ -13,10 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.12.5",
-    "ts-node-dev": "^2.0.0"
+    "cron": "^3.1.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "ts-node-dev": "^2.0.0",
+    "twitter-api-v2": "^1.16.3"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.8",
     "nodemon": "^3.1.0"
   }
 }
